DamageNumbers is working, top bar buttons highlight correctly, ITS AN ABSOLUTELY WONDERFUL DAY!